<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ProductShopping</string>
    <string name="select_a_category_to_display_the_list">Select a category to display the list</string>
    <string name="in_stock_20">In Stock: 20</string>
    <string name="user_id_123">User ID: 123</string>
    <string name="product_name">Product Name</string>
    <string name="created_at_2024_01_01" tools:ignore="TypographyDashes">Created At: 2024-01-01</string>
    <string name="product_description_this_is_a_detailed_description_of_the_product">Product Description: This is a detailed description of the product.</string>
    <string name="category">Category</string>
    <string name="price_100">Price: $100</string>
    <string name="ratings_4_5">Ratings: 4.5</string>
    <string name="brand">Brand</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="error">error</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="price_0_00_stock_0">Price: ₹0.00 | Stock: 0</string>
    <string name="created_at_2023_01_01" tools:ignore="TypographyDashes">Created At: 2023-01-01</string>
    <string name="ratings_0_0">Ratings: 0.0</string>
    <string name="brand_category">Brand | Category</string>
    <string name="description_description_goes_here" tools:ignore="TypographyEllipsis">Description: Description goes here...</string>
    <string name="profile_image">Profile Image</string>
    <string name="my_eshop">My eShop</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
</resources>