<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/light_blue"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:cardCornerRadius="15dp"
                    android:background="#B71C1C">
                    <ImageView
                        android:id="@+id/product_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="TODO"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription,HardcodedText" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5sp"
                android:orientation="vertical"
                tools:ignore="RtlSymmetry">

                <!-- Product Name -->
                <TextView
                    android:id="@+id/text_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="8dp"/>

                <!-- Brand and Category -->
                <TextView
                    android:id="@+id/text_product_brand_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brand_category"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginTop="4dp" />


                <!-- Ratings -->
                <TextView
                    android:id="@+id/text_product_ratings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ratings_0_0"
                    android:textSize="14sp"
                    android:textColor="@color/dark_blue"
                    android:layout_marginTop="4dp" />
            </LinearLayout>
        </LinearLayout>
        <!-- Price and Stock -->
        <TextView
            android:id="@+id/text_product_price_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_0_00_stock_0"
            android:textSize="16sp"
            android:textColor="@android:color/holo_green_dark"
            android:layout_marginTop="8dp" />

        <!-- Created At -->
        <TextView
            android:id="@+id/text_product_created_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_at_2023_01_01"
            android:textSize="12sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="4dp" />

        <!-- Description -->
        <TextView
            android:id="@+id/text_product_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_description_goes_here"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
